# aws-learning

./: .gitignore  README.md  pyproject.toml
ansible/: .gitignore  ansible.cfg  setup_web.yml  site.yml
ansible/roles/common/handlers/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/common/templates/: amazon-cloudwatch-agent.json.j2
ansible/roles/nginx/tasks/: main.yml
src/: logger_config.py
src/aws_sample_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ec2_app/: ec2_service.py  ec2ctl.py
src/s3_app/: logger_config.py  s3ctl.py
terraform/: .gitignore  ansible_inventory.tf  ec2.tf  iam.tf  variables.tf  vpc.tf
tests/: test_ec2_service.py  test_ec2ctl.py  test_s3ctl.py
